--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.14",
+    "@heroicons/vue": "^2.0.18",
     "vue": "^3.3.4"
   },
   "devDependencies": {
